tests/compile/compile_fail/mix_vec3_scalar_types.stderr
error[E0308]: mismatched types
 --> tests/compile/compile_fail/mix_vec3_scalar_types.rs:7:18
  |
7 |     let _c = a + b; // should fail; no Add impl
  |                  ^ expected `Vec3<F32Det>`, found `Vec3<f32>`
  |
  = note: expected struct `echo_math::Vec3<echo_math::F32Det>`
             found struct `echo_math::Vec3<f32>`
